--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,12 @@ import foto5 from "public/assets/sssss.jpg";
         class="bg-fuchsia-400 text-black px-8 py-3 rounded-full font-bold text-lg hover:bg-white transition-colors duration-300 pointer-events-auto"
       >
         Explorar Colección
-        <link rel="stylesheet" href="https://super-sorbet-8d8c4a.netlify.app/home">
+        <a 
+  href="https://super-sorbet-8d8c4a.netlify.app/home"
+  class="bg-fuchsia-400 text-black px-8 py-3 rounded-full font-bold text-lg hover:bg-white transition-colors duration-300 inline-block text-center"
+>
+  Explorar Colección
+</a>
       </button>
     </div>
 
