--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,14 +74,13 @@ import foto5 from "public/assets/sssss.jpg";
       </div>
     </div>
 
-    <!-- Texto 5 / Botón -->
     <div id="texto-5" class="absolute bottom-10 left-1/2 -translate-x-1/2 opacity-0">
      
-        Explorar Colección
+        
         <a 
   href="https://super-sorbet-8d8c4a.netlify.app/home"
   class="bg-fuchsia-400 text-black px-8 py-3 rounded-full font-bold text-lg hover:bg-white transition-colors duration-300 inline-block text-center"
->
+>Explorar Colección
 </a>
     </div>
 
