--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,17 +74,20 @@ import foto5 from "public/assets/sssss.jpg";
       </div>
     </div>
 
-    <div id="texto-5" class="absolute bottom-10 left-1/2 -translate-x-1/2 opacity-0">
-     
-        
-        <a 
-  href="https://super-sorbet-8d8c4a.netlify.app/home"
-  class="bg-fuchsia-400 text-black px-8 py-3 rounded-full font-bold text-lg hover:bg-white transition-colors duration-300 inline-block text-center"
->Explorar Colección
-</a>
-    </div>
-
+<div id="texto-5" class="absolute bottom-10 left-1/2 -translate-x-1/2 opacity-0">
+  <div class="pointer-events-auto">
+    <a
+      href="https://super-sorbet-8d8c4a.netlify.app"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="bg-fuchsia-400 text-black px-8 py-3 rounded-full font-bold text-lg 
+             hover:bg-white hover:text- transition-colblackors duration-300 inline-block text-center"
+    >
+      Explorar Colección
+    </a>
   </div>
+</div>
+
 </Layout>
 
 <style>
