--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ import foto5 from "public/assets/sssss.jpg";
 <div id="texto-5" class="absolute bottom-10 left-1/2 -translate-x-1/2 opacity-0">
   <div class="pointer-events-auto">
     <a
-      href="https://super-sorbet-8d8c4a.netlify.app"
+      href="https://dleytc.netlify.app/"
       target="_blank"
       rel="noopener noreferrer"
       class="bg-fuchsia-400 text-black px-8 py-3 rounded-full font-bold text-lg 
